--- a/css/page-style.less
+++ b/css/page-style.less
@@ -77,12 +77,17 @@ header{
   }
   .main-bar{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
     .community-header{
       padding: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       background-color: #f6f6f6;
+      border-bottom: 1px solid #d4d4d4;
       .community-info{
         display: flex;
         align-items: center;
@@ -112,6 +117,28 @@ header{
         border: none;
         cursor: pointer;
         outline: none;
+      }
+    }
+    .main-bar-content{
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      .conversation{
+        height: 100%;
+      }
+      .writting{
+        padding: 10px;
+        padding-right: 300px;
+        text-align: center;
+        background-color: #f6f6f6;
+        border-top: 1px solid #d4d4d4;
+        input{
+          border: 1px solid #d4d4d4;
+          padding: 10px 5px;
+          width: 500px;
+          outline: none;
+        }
       }
     }
   }
