--- a/css/page-style.less
+++ b/css/page-style.less
@@ -140,11 +140,42 @@ header{
         justify-content: stretch;
         .messages{
           width: 100%;
+          background-color: #f8f8f8;
+          overflow: auto;
+          padding-top: 20px;
+          article{
+            margin: auto;
+            display: flex;
+            justify-content: stretch;
+            align-items: flex-start;
+            background-color: white;
+            padding: 15px;
+            border: 1px solid #d4d4d4;
+            margin-bottom: 20px;
+            max-width: 500px;
+            img{
+              margin-right: 15px;
+            }
+            .name{
+              font-weight: 700;
+              margin-bottom: 10px;
+            }
+            .message-body{
+              margin-bottom: 10px;
+              font-size: 15px;
+            }
+            time{
+              font-size: 13px;
+              font-weight: 700;
+              color: #aeaeae;
+            }
+          }
         }
         .participants{
           overflow-y: auto;
           max-height: 100%;
-          width: 300px;
+          width: 230px;
+          min-width: 230px;
           background-color: #e2e2e2;
           padding-left: 30px;
           .title{
@@ -162,7 +193,7 @@ header{
       }
       .writting{
         padding: 10px;
-        padding-right: 300px;
+        padding-right: 254px;
         text-align: center;
         background-color: #f6f6f6;
         border-top: 1px solid #d4d4d4;
