--- a/css/page-style.less
+++ b/css/page-style.less
@@ -86,7 +86,8 @@ header{
     }
   }
   .main-bar{
-    width: 100%;
+    //width: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -138,21 +139,25 @@ header{
       .conversation{
         display: flex;
         justify-content: stretch;
+        height: 100%;
         .messages{
-          width: 100%;
+          flex-grow: 1;
           background-color: #f8f8f8;
           overflow: auto;
           padding-top: 20px;
           article{
             margin: auto;
             display: flex;
-            justify-content: stretch;
+            justify-content: space-around;
             align-items: flex-start;
             background-color: white;
             padding: 15px;
             border: 1px solid #d4d4d4;
             margin-bottom: 20px;
             max-width: 500px;
+            .content{
+              flex-basis: 400px;
+            }
             img{
               margin-right: 15px;
             }
