Markup optimization, remove all errors and warnings according w3 validator

--- a/css/less/index-style.less
+++ b/css/less/index-style.less
@@ -58,7 +58,7 @@ main{
       input{
         margin-right: 15px;
       }
-      p{
+      .privacy-title{
         font-size: 13px;
         text-align: left;
         font-weight: 400;
