--- a/css/less/page-style.less
+++ b/css/less/page-style.less
@@ -12,10 +12,10 @@ header{
   text-align: right;
   width: 100%;
   background-color: @grey;
-  color: white;
+  color: @white;
   padding: 7px 20px;
   .status{
-    background-color: #9cea2e;
+    background-color: @green;
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -42,7 +42,7 @@ header{
     }
     .separator{
       padding: 15px 0;
-      background-color: #e2e2e2;
+      background-color: @light-grey;
       text-align: center;
     }
     .communities{
@@ -53,9 +53,9 @@ header{
         justify-content: space-between;
         align-items: center;
         padding: 15px;
-        border-bottom: 1px solid #d4d4d4;
+        border-bottom: 1px solid @border-grey;
         &.selected{
-          background-color: #e2e2e2;
+          background-color: @light-grey;
           .title{
             font-weight: 700;
           }
@@ -70,7 +70,7 @@ header{
           width: 100%;
         }
         time{
-          color: #9b9b9b;
+          color: @dark-grey;
           font-weight: 500;
           font-size: 12px;
         }
@@ -90,14 +90,14 @@ header{
     flex-direction: column;
     align-items: stretch;
     justify-content: stretch;
-    border-left: 1px solid #d4d4d4;
+    border-left: 1px solid @border-grey;
     .community-header{
       padding: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #f6f6f6;
-      border-bottom: 1px solid #d4d4d4;
+      background-color: @background-grey;
+      border-bottom: 1px solid @border-grey;
       .community-info{
         display: flex;
         align-items: center;
@@ -109,7 +109,7 @@ header{
           font-weight: 700;
         }
         .num{
-          color: #474747;
+          color: @grey;
           font-size: 16px;
           margin-bottom: 10px;
         }
@@ -121,12 +121,16 @@ header{
       }
       button{
         padding: 15px 30px;
-        background-color: #6bb600;
-        color: white;
+        background-color: @green;
+        color: @white;
         border-radius: 50px;
         border: none;
         cursor: pointer;
         outline: none;
+        transition: .3s;
+        &:hover{
+          background-color: @dark-green;
+        }
       }
     }
     .main-bar-content{
@@ -140,7 +144,7 @@ header{
         height: 100%;
         .messages{
           flex-grow: 1;
-          background-color: #f8f8f8;
+          background-color: @background-grey;
           overflow: auto;
           padding-top: 20px;
           article{
@@ -148,9 +152,9 @@ header{
             display: flex;
             justify-content: space-around;
             align-items: flex-start;
-            background-color: white;
+            background-color: @white;
             padding: 15px;
-            border: 1px solid #d4d4d4;
+            border: 1px solid @border-grey;
             margin-bottom: 20px;
             max-width: 500px;
             .content{
@@ -170,7 +174,7 @@ header{
             time{
               font-size: 13px;
               font-weight: 700;
-              color: #aeaeae;
+              color: @border-grey;
             }
           }
         }
@@ -179,10 +183,10 @@ header{
           max-height: 100%;
           width: 230px;
           min-width: 230px;
-          background-color: #e2e2e2;
+          background-color: @light-grey;
           padding-left: 30px;
           .title{
-            border-bottom: 1px solid #d4d4d4;
+            border-bottom: 1px solid @border-grey;
             padding: 30px 0 20px 0;
             font-weight: 700;
             margin-bottom: 15px;
@@ -198,10 +202,10 @@ header{
         padding: 10px;
         padding-right: 254px;
         text-align: center;
-        background-color: #f6f6f6;
-        border-top: 1px solid #d4d4d4;
+        background-color: @background-grey;
+        border-top: 1px solid @border-grey;
         input{
-          border: 1px solid #d4d4d4;
+          border: 1px solid @border-grey;
           padding: 10px 5px;
           width: 500px;
           outline: none;
