Replace input for messages to contenteditable block. Add script for sumulating input placeholder behaviour

--- a/css/less/page-style.less
+++ b/css/less/page-style.less
@@ -204,11 +204,14 @@ header{
         text-align: center;
         background-color: @background-grey;
         border-top: 1px solid @border-grey;
-        input{
+        .input{
           border: 1px solid @border-grey;
-          padding: 10px 5px;
+          padding: 10px;
           width: 500px;
           outline: none;
+          margin: auto;
+          background-color: @white;
+          text-align: left;
         }
       }
     }
