--- a/css/less/reset.less
+++ b/css/less/reset.less
@@ -17,7 +17,6 @@ time, mark, audio, video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    box-sizing: border-box;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -43,4 +42,8 @@ table {
 }
 a{
     text-decoration: none;
+}
+
+*{
+    box-sizing: border-box;
 }
